# bzmenu

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Cross.toml  README.md  flake.nix
.github/workflows/: ci.yml  release.yml
locales/: app.yml
src/: app.rs  icons.rs  launcher.rs  lib.rs  macros.rs  main.rs  menu.rs  notification.rs
src/bz/: agent.rs  controller.rs  device.rs  pairing.rs  scanner.rs
